css/stylesheet.css
/*
 * Front-end.
 */

.onepage_page {}

#onepage_toplink {
    position: fixed;
    bottom: 1em;
    right: 1em;
    z-index: 1;
}
#onepage_toplink img {
    border: none;
}
.onepage_hide {
    opacity: 0;
    visibility: hidden;
    transition: visibility 1s, opacity 1s;
}
.onepage_show {
    opacity: 1;
    visibility: visible;
    transition: visibility 1s, opacity 1s;
}

/*
 * Back-end.
 */

.onepage_logo {
    float: left;
    width: 128px;
    height: 128px;
    margin: 0.5em 1em 0 0;
}
.onepage_justify {
    text-align: justify;
}

